corrected all tables appearance on mobile

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -871,6 +871,10 @@ video {
   width: 10px;
 }
 
+.w-\[1100px\] {
+  width: 1100px;
+}
+
 .w-\[20px\] {
   width: 20px;
 }
@@ -931,12 +935,8 @@ video {
   width: ;
 }
 
-.w-\[80p\] {
-  width: 80p;
-}
-
-.w-\[00px\] {
-  width: 00px;
+.w-\[40px\] {
+  width: 40px;
 }
 
 .max-w-md {
